Correcciones en webmaster

--- a/WebApplication1/Areas/webmaster/Views/comunidades/editar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/comunidades/editar.cshtml
@@ -38,6 +38,17 @@
         <!-- end back button -->
 
         <div class="row">
+            @if (ViewBag.msgError != null)
+            {
+                <div class="col-12">
+                    <div class="alert alert-danger" role="alert">
+                        <strong>Error: </strong> @ViewBag.msgError
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                </div>
+            }
             <div class="col-12">
                 <div class="card">
                     @using (Html.BeginForm("editcommunity", "comunidades", FormMethod.Post,
@@ -65,36 +76,36 @@
                             </div>
                             <div class="form-divider"></div>
                             @*<div class="form-group row">
-                                <label for="example-name1-input" class="col-sm-3 col-form-label">Administrador</label>
-                                <div class="col-sm-9">
+                            <label for="example-name1-input" class="col-sm-3 col-form-label">Administrador</label>
+                            <div class="col-sm-9">
 
-                                    <select class="form-control" id="AdminSelect" multiple="multiple" name="adminlist"
-                                            data-toggle="tooltip" title="Email del administrador">
+                                <select class="form-control" id="AdminSelect" multiple="multiple" name="adminlist"
+                                        data-toggle="tooltip" title="Email del administrador">
 
-                                        @foreach (var item in Model.coadminList)
+                                    @foreach (var item in Model.coadminList)
+                                    {
+                                        bool bandera = true;
+                                        foreach (var CoUser in Model.editCommunity.communusers)
                                         {
-                                            bool bandera = true;
-                                            foreach (var CoUser in Model.editCommunity.communusers)
+
+                                            if (CoUser.user.id == item.id)
                                             {
+                                                bandera = false;
+                                                <option value="@item.id" selected>@item.email</option>
 
-                                                if (CoUser.user.id == item.id)
-                                                {
-                                                    bandera = false;
-                                                    <option value="@item.id" selected>@item.email</option>
-
-                                                }
                                             }
-
-                                            if (bandera)
-                                            {
-                                                <option value="@item.id">@item.email</option>
-                                            }
-
                                         }
-                                    </select>
-                                </div>
+
+                                        if (bandera)
+                                        {
+                                            <option value="@item.id">@item.email</option>
+                                        }
+
+                                    }
+                                </select>
                             </div>
-                            <div class="form-divider"></div>*@
+                        </div>
+                        <div class="form-divider"></div>*@
                             <div class="form-group row">
                                 <label class="col-sm-3 col-form-label">Paquete</label>
                                 <div class="col-sm-9">
