--- a/WebApplication1/Areas/webmaster/Views/webmaster/agregar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/webmaster/agregar.cshtml
@@ -53,7 +53,17 @@
         <!-- end back button -->
 
         <div class="row">
-
+            @if (ViewBag.msgError != null)
+            {
+                <div class="col-12">
+                    <div class="alert alert-danger" role="alert">
+                        <strong>Error: </strong> @ViewBag.msgError
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                </div>
+            }
             <div class="col-12">
                 <div class="card">
                     @using (Html.BeginForm("newwebmaster", "webmaster", FormMethod.Post,
@@ -65,80 +75,82 @@
                          enctype = "multipart/form-data"
                      }))
                     {
-                    <div class="card-body">
-                        <h5 class="d-inline-block">Nuevo webmaster</h5>
-                        <div class="form-divider"></div>
-                        <div class="form-group row">
+                        <div class="card-body">
+                            <h5 class="d-inline-block">Nuevo webmaster</h5>
+                            <div class="form-divider"></div>
+                            <div class="form-group row">
 
-                            <div id="img-fluid" class="col-sm-3">
-
-                            </div>
-
-                            <div class="col-sm-9">
-                                <div class="input-group mt-2">
-                                    <div class="custom-file">
-                                        <input type="file" class="custom-file-input" id="inputGroupFile04"
-                                               name="user_logo" data-toggle="tooltip" title="Subir logo en formato jpg o png" />
-                                        <label class="custom-file-label" for="inputGroupFile04">Seleccionar la imagen</label>
-                                    </div>
-                                    <div class="col-sm-3">
-                                        <small class="form-text text-muted">Subir logo en formato jpg o png</small>
-                                    </div>
+                                <div id="img-fluid" class="col-sm-3">
 
                                 </div>
+
+                                <div class="col-sm-9">
+                                    <div class="input-group mt-2">
+                                        <div class="custom-file">
+                                            <input type="file" class="custom-file-input" id="inputGroupFile04"
+                                                   name="user_logo" data-toggle="tooltip" title="Subir logo en formato jpg o png" />
+                                            <label class="custom-file-label" for="inputGroupFile04">Seleccionar la imagen</label>
+                                        </div>
+                                        <div class="col-sm-3">
+                                            <small class="form-text text-muted">Subir logo en formato jpg o png</small>
+                                        </div>
+
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-divider"></div>
-                        <div class="form-group row">
-                            <label for="example-email-input" class="col-sm-3 col-form-label">Nombre</label>
-                            <div class="col-sm-9">
-                                <input maxlength="20" class="form-control soloTexto" type="text" value="" name="first_name1"
-                                       data-toggle="tooltip" title="Nombre del webmaster"
-                                       placeholder="Nombre" id="example-email-input" required>
-                                <small class="form-text text-muted">Nombre del webmaster</small>
+                            <div class="form-divider"></div>
+                            <div class="form-group row">
+                                <label for="example-email-input" class="col-sm-3 col-form-label">Nombre</label>
+                                <div class="col-sm-9">
+                                    <input maxlength="20" class="form-control soloTexto" type="text" value="" name="first_name1"
+                                           data-toggle="tooltip" title="Nombre del webmaster"
+                                           placeholder="Nombre" id="example-email-input" required>
+                                    <small class="form-text text-muted">Nombre del webmaster</small>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-divider"></div>
-                        <div class="form-group row">
-                            <label for="example-email-input" class="col-sm-3 col-form-label">Apellido paterno</label>
-                            <div class="col-sm-9">
-                                <input maxlength="20" class="form-control soloTexto" type="text" value="" name="last_name1"
-                                       data-toggle="tooltip" title="Apellido paterno del webmaster"
-                                       placeholder="Apellido paterno" id="example-email-input" required>
-                                <small class="form-text text-muted">Apellido paterno del webmaster</small>
+                            <div class="form-divider"></div>
+                            <div class="form-group row">
+                                <label for="example-email-input" class="col-sm-3 col-form-label">Apellido paterno</label>
+                                <div class="col-sm-9">
+                                    <input maxlength="20" class="form-control soloTexto" type="text" value="" name="last_name1"
+                                           data-toggle="tooltip" title="Apellido paterno del webmaster"
+                                           placeholder="Apellido paterno" id="example-email-input" required>
+                                    <small class="form-text text-muted">Apellido paterno del webmaster</small>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-divider"></div>
-                        <div class="form-group row">
-                            <label for="example-email-input" class="col-sm-3 col-form-label">Apellido materno</label>
-                            <div class="col-sm-9">
-                                <input maxlength="20" class="form-control soloTexto" type="text" value="" name="mother_last_name1"
-                                       data-toggle="tooltip" title="Apellido materno del webmaster"
-                                       placeholder="Apellido materno" id="example-email-input" required>
-                                <small class="form-text text-muted">Apellido materno del webmaster</small>
+                            <div class="form-divider"></div>
+                            <div class="form-group row">
+                                <label for="example-email-input" class="col-sm-3 col-form-label">Apellido materno</label>
+                                <div class="col-sm-9">
+                                    <input maxlength="20" class="form-control soloTexto" type="text" value="" name="mother_last_name1"
+                                           data-toggle="tooltip" title="Apellido materno del webmaster"
+                                           placeholder="Apellido materno" id="example-email-input" required>
+                                    <small class="form-text text-muted">Apellido materno del webmaster</small>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-divider"></div>
-                        <div class="form-group row">
-                            <label for="example-lastname1-input" class="col-sm-3 col-form-label">Email</label>
-                            <div class="col-sm-9">
-                                <input maxlength="40" class="form-control" type="email" value="" name="email"
-                                       data-toggle="tooltip" title="Email del webmaster"
-                                       placeholder="Email" id="example-email-input" required>
-                                <small class="form-text text-muted">Email del webmaster</small>
+                            <div class="form-divider"></div>
+                            <div class="form-group row">
+                                <label for="example-lastname1-input" class="col-sm-3 col-form-label">Correo electrónico</label>
+                                <div class="col-sm-9">
+                                    <input maxlength="40" class="form-control inputEmailKey" type="email" value="" name="email"
+                                           data-toggle="tooltip" title="Correo electrónico del webmaster"
+                                           placeholder="Correo electrónico" id="example-email-input" required>
+                                    <div id="textError">
+                                        <small class="form-text text-muted">Correo electrónico del webmaster</small>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-divider"></div>
-                        <div class="form-group row">
-                            <label for="example-password-input" class="col-sm-3 col-form-label">Contraseña</label>
-                            <div class="col-sm-9">
-                                <input maxlength="16" class="form-control" type="password" value="" name="password"
-                                       data-toggle="tooltip" title="Contraseña utilizada para ingresar al sistema"
-                                       placeholder="Contraseña" id="example-password-input" required>
-                                <small class="form-text text-muted">Contraseña utilizada para ingresar al sistema</small>
+                            <div class="form-divider"></div>
+                            <div class="form-group row">
+                                <label for="example-password-input" class="col-sm-3 col-form-label">Contraseña</label>
+                                <div class="col-sm-9">
+                                    <input maxlength="16" class="form-control" type="password" value="" name="password"
+                                           data-toggle="tooltip" title="Contraseña utilizada para ingresar al sistema"
+                                           placeholder="Contraseña" id="example-password-input" required>
+                                    <small class="form-text text-muted">Contraseña utilizada para ingresar al sistema</small>
+                                </div>
                             </div>
-                        </div>
-                        @*<div class="form-divider"></div>
+                            @*<div class="form-divider"></div>
                         <div class="form-group row">
                             <label class="col-sm-3 col-form-label">Comunidad</label>
                             <div class="col-sm-9">
@@ -152,7 +164,7 @@
                                 <small class="form-text text-muted">Lista de comunidades</small>
                             </div>
                         </div>*@
-                        @*<div class="form-divider"></div>
+                            @*<div class="form-divider"></div>
                         <div class="form-group row" style="display: none;">
                             <label class="col-sm-3 col-form-label">Comunidad</label>
                             <div class="col-sm-9">
@@ -168,10 +180,10 @@
                         </div>*@
 
 
-                     
-                        <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
-                        <a href="@Url.Action("listado", "webmaster", new { area = "webmaster" })"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
-                    </div>
+
+                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
+                            <a href="@Url.Action("listado", "webmaster", new { area = "webmaster" })"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
+                        </div>
                     }
                 </div>
             </div>
