--- a/WebApplication1/Areas/webmaster/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/Shared/_Layout.cshtml
@@ -875,7 +875,7 @@
 
         //Solo texto. Validacion para inputs
         $('.soloTexto').bind('keypress', function (event) {
-            var regex = new RegExp("^[a-zA-Z ]+$");
+            var regex = new RegExp("^[a-zA-ZáéíóúüñÁÉÍÓÚÑÜ ]+$");
             var key = String.fromCharCode(!event.charCode ? event.which : event.charCode);
             if (!regex.test(key)) {
                 event.preventDefault();
@@ -968,7 +968,8 @@
             } else {  
                  $(".hiddenRequired").prop('required', false);               
             }  
-        });  
+            }); 
+            
         $("#customCheck7").click(function() {  
             if($("#customCheck7").is(':checked')) {  
                 $(".hiddenRequired").prop('required', false);                              
@@ -976,7 +977,137 @@
                   $(".hiddenRequired").attr('required', true);                              
             }  
         });       
-});  
+        });  
+
+
+        //Validar Correo existente en administradores
+        var _errorEmail = 0;
+        var _errorEmailEdit = 0;
+        
+        
+        $('.inputEmailKey').bind('keyup', function () {
+            var datos = {
+                id:$(".idDelUserEdit").val(),
+                correo:$(".inputEmailKey").val(),
+            };
+            var urls = "@Url.Action("confirmarCorreo", "control", new { area = "webmaster" })";
+
+            var errUrl = "@Url.Action("error", "control", new { area = "webmaster", Error = "Error al validar correo. Revisar el controlador."  })";
+
+            var _nombreArea = "";
+            var modelArea = "@Model.side_menu";
+
+            if (modelArea.toString() == "webmaster") {
+                _nombreArea = "Webmaster";
+            } else if (modelArea.toString() == "administradores") {
+                _nombreArea = "Administrador";
+            } else {
+                _nombreArea = "Titular";
+            }
+
+            $.ajax({
+                type: 'POST',
+                data: JSON.stringify(datos),
+                url: urls,
+                dataType: "json",
+                contentType: 'application/json; charset=utf-8',
+                success: function (result) {
+                    if (result.result === "adExist") {
+                        var textError = '<small id="adExist" style="color:red!important" class="form-text text-muted">Existe un Administrador con éste email</small>';
+                        $("#textError").empty().append(textError);
+                        $(".inputEmailKey").addClass('is-invalid');
+                        _errorEmail = 1;
+
+                    } else if (result.result === "adInact") {
+
+                        var textError = '<small id="adExist" style="color:red!important" class="form-text text-muted">Existe un Administrador con éste email pero está inactivo</small>';
+                        $("#textError").empty().append(textError);
+                        $(".inputEmailKey").addClass('is-invalid');
+                        _errorEmail = 1;
+
+                    } else if (result.result === "noExist") {
+
+                         var textError = '<small id="adNormal" class="form-text text-muted">Correo electrónico del '+_nombreArea+'</small>';
+                        $("#textError").empty().append(textError);
+                        $(".inputEmailKey").removeClass('is-invalid');
+                        _errorEmail = 0;
+
+                    } else if (result.result === "noExistEdit") {
+                         
+                        $("#textError").empty();
+                        $(".inputEmailKey").removeClass('is-invalid');                   
+                        _errorEmail = 0;
+
+                    } else if (result.result === "wbExist") {
+
+                        var textError = '<small id="adExist" style="color:red!important" class="form-text text-muted">Existe un Webmaster con éste email</small>';
+                        $("#textError").empty().append(textError);
+                        $(".inputEmailKey").addClass('is-invalid');
+                        _errorEmail = 1;
+
+                    } else if (result.result === "wbInact") {
+
+                        var textError = '<small id="adExist" style="color:red!important" class="form-text text-muted">Existe un Webmaster con éste email pero está inactivo</small>';
+                        $("#textError").empty().append(textError);
+                        $(".inputEmailKey").addClass('is-invalid');
+                        _errorEmail = 1;
+
+                    } else if (result.result === "tiExist") {
+
+                        var textError = '<small id="adExist" style="color:red!important" class="form-text text-muted">Existe un Titular con éste email</small>';
+                        $("#textError").empty().append(textError);
+                        $(".inputEmailKey").addClass('is-invalid');
+                        _errorEmail = 1;
+
+                    } else if (result.result === "tiInact") {
+
+                        var textError = '<small id="adExist" style="color:red!important" class="form-text text-muted">Existe un Titular con éste email pero está inactivo</small>';
+                        $("#textError").empty().append(textError);
+                        $(".inputEmailKey").addClass('is-invalid');
+                        _errorEmail = 1;
+
+                    } else if (result.result === "userEdit") {
+                        
+                        $("#textError").empty();
+                        $(".inputEmailKey").removeClass('is-invalid');                      
+                        _errorEmail = 0;
+
+                    } else {
+                        window.location = errUrl;
+                    }
+                },
+            });
+        });          
+
+        //Formularios de donde se usa Email
+        $("#newadminForm").on('submit', function (evt) {
+            if (_errorEmail == 1)
+            {
+                evt.preventDefault();                  
+            }              
+        });        
+
+         $("#editadminForm").on('submit', function (evt) {
+            if (_errorEmail == 1)
+            {
+                evt.preventDefault();                  
+            }              
+         });        
+
+        $("#newresidentForm").on('submit', function (evt) {
+            if (_errorEmail == 1)
+            {
+                evt.preventDefault();                  
+            }              
+        });        
+
+         $("#editresidentForm").on('submit', function (evt) {
+            if (_errorEmail == 1)
+            {
+                evt.preventDefault();                  
+            }              
+         });
+       
     </script>
 
     <!--empieza un script-->
@@ -1456,7 +1587,7 @@
 
             var errUrl = "@Url.Action("listado", "paquetes", new { area = "webmaster", Error = "No se puede eliminar este paquete porque posee comunidades asociadas"  })";
 
-            var respuesta = confirm("¿Estás seguro que deseas eliminarel paquete?");
+            var respuesta = confirm("¿Estás seguro que deseas eliminar el paquete?");
         if (respuesta == true) {
 
             $.ajax({
@@ -1866,37 +1997,37 @@
             }
         }
 
-        function onDeleteCommunity(self) {
+        function onConfirmDelete(self) {
+            var id = $(self).data("id");            
+            $("#idDeleteComm").val(id),
+             $('#exampleModalLong').modal('show')
+        }
 
-            var id = $(self).data("id");
+        function onDeleteCommunity() {
+
+            var id = $("#idDeleteComm").val();
             var formData = new FormData();
             formData.append("id", id);
-            var url = "@Url.Action("DeleteCommunity", "comunidades", new { area = "webmaster" })";
-
-             var respuesta = confirm("estas seguro que deseas eliminar la comunidad");
-        if (respuesta == true) {
-
+            var url = "@Url.Action("DeleteCommunity", "comunidades", new { area = "webmaster" })";    
+            var errUrl = "@Url.Action("listado", "comunidades", new { area = "webmaster", Error = "No se pudo eliminar la comunidad. Revisar controlador."})";                  
             $.ajax({
                 url: url,
                 type: "post",
                 data: formData,
                 success: function (result) {
                     $("#ck-body-loading-overlay").hide();
-                    if (result.result === "error") {
-                        console.log('couln\'t get roles');
+                    if (result.result === "error") {                        
+                        window.location = errUrl;
+                    } else if (result.result === "NotAlowed") {
+
+                    
                     } else {
                         location.reload();
                     }
                 },
                 processData: false,
                 contentType: false
-            });
-
-            } else {
-
-            return false;
-
-        }
+            })            
         }
 
              function onDeleteBlog(self) {
