--- a/WebApplication1/Areas/webmaster/Views/administradores/agregar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/administradores/agregar.cshtml
@@ -53,7 +53,17 @@
         <!-- end back button -->
 
         <div class="row">
-
+            @if (ViewBag.msgError != null)
+            {
+                <div class="col-12">
+                    <div class="alert alert-danger" role="alert">
+                        <strong>Error: </strong> @ViewBag.msgError
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                </div>
+            }
             <div class="col-12">
                 <div class="card">
                     @using (Html.BeginForm("newadmin", "administradores", FormMethod.Post,
@@ -118,26 +128,28 @@
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-lastname1-input" class="col-sm-3 col-form-label">Email</label>
+                                <label for="example-lastname1-input" class="col-sm-3 col-form-label">Correo electrónico</label>
                                 <div class="col-sm-9">
-                                    <input maxlength="40" required class="form-control" type="email" value="" name="email"
-                                           data-toggle="tooltip" title="Email del administrador"
-                                           placeholder="Email" id="example-email-input">
-                                    <small class="form-text text-muted">Email del administrador</small>
+                                    <input maxlength="40" autocomplete="off" required class="form-control inputEmailKey" type="email" value="" name="email"
+                                           data-toggle="tooltip" title="Correo electrónico del administrador"
+                                           placeholder="Correo electrónico" id="example-email-input">
+                                    <div id="textError">
+                                        <small id="adNormal" class="form-text text-muted">Correo electrónico del administrador</small>
+                                    </div>                                                                                                         
                                 </div>
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
                                 <label for="example-password-input" class="col-sm-3 col-form-label">Contraseña</label>
                                 <div class="col-sm-9">
-                                    <input maxlength="16" class="form-control" type="password" value="" name="password"
+                                    <input maxlength="16" autocomplete="off" class="form-control" type="password" value="" name="password"
                                            data-toggle="tooltip" title="Contraseña utilizada para ingresar al sistema"
                                            placeholder="Contraseña" id="example-password-input" required>
                                     <small class="form-text text-muted">Contraseña utilizada para ingresar al sistema</small>
                                 </div>
                             </div>
                             <div class="form-divider"></div>
-                           
+
                             <div class="form-group row">
                                 <label class="col-sm-3 col-form-label">Comunidad</label>
                                 <div class="col-sm-9">
@@ -149,10 +161,10 @@
                                     </select>
                                     <small class="form-text text-muted">Lista de comunidades</small>
                                 </div>
-                                </div>
-                                <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
-                                <a href="@Url.Action("listado", "administradores", new { area = "webmaster" })"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                             </div>
+                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
+                            <a href="@Url.Action("listado", "administradores", new { area = "webmaster" })"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
+                        </div>
                     }
                 </div>
             </div>
@@ -169,8 +181,7 @@
 
 </div> <!-- Page content Wrapper -->
 
-    <script type="text/javascript">       
-
+    <script type="text/javascript">               
         (function () {
 
             function filePreview(input) {
