--- a/WebApplication1/Areas/webmaster/Views/administradores/editar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/administradores/editar.cshtml
@@ -53,7 +53,17 @@
         <!-- end back button -->
 
         <div class="row">
-
+            @if (ViewBag.msgError != null)
+            {
+                <div class="col-12">
+                    <div class="alert alert-danger" role="alert">
+                        <strong>Error: </strong> @ViewBag.msgError
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                </div>
+            }
             <div class="col-12">
                 <div class="card">
                     @using (Html.BeginForm("editadmin", "administradores", FormMethod.Post,
@@ -66,7 +76,7 @@
                      }))
                     {
                         @Html.AntiForgeryToken()
-                        <input name="adminID" value="@Model.editAdmin.id" type="hidden" />
+                        <input name="adminID" class="idDelUserEdit" value="@Model.editAdmin.id" type="hidden" />
                         <div class="card-body">
                             <h5 class="d-inline-block">@Model.editAdmin.first_name1 @Model.editAdmin.last_name1</h5>
                             <div class="form-divider"></div>
@@ -130,12 +140,13 @@
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-lastname1-input" class="col-sm-3 col-form-label">Email</label>
+                                <label for="example-lastname1-input" class="col-sm-3 col-form-label">Correo electrónico</label>
                                 <div class="col-sm-9">
-                                    <input maxlength="40" required class="form-control" type="email" value="@Model.editAdmin.email"
-                                           placeholder="Email" id="example-email-input" name="email"
+                                    <input maxlength="40" required class="form-control inputEmailKey" type="email" value="@Model.editAdmin.email"
+                                           placeholder="Correo electrónico" id="example-email-input" name="email"
                                            data-toggle="tooltip" />
-                                    @* <small class="form-text text-muted">Email del administrador</small>*@
+                                    <div id="textError">                                      
+                                    </div>
                                 </div>
                             </div>
                             <div class="form-divider"></div>
@@ -148,7 +159,7 @@
                                     @* <small class="form-text text-muted">Contraseña utilizada para ingresar al sistema</small>*@
                                 </div>
                             </div>
-                            <div class="form-divider"></div>                            
+                            <div class="form-divider"></div>
                             <div class="form-group row">
                                 <label class="col-sm-3 col-form-label">Comunidad</label>
                                 <div class="col-sm-9">
@@ -177,26 +188,26 @@
                                 </div>
                             </div>
                             @*<div class="form-divider"></div>
-        <div class="form-group row">
-            <label class="col-sm-3 col-form-label">Comunidad</label>
-            <div class="col-sm-9">
-                <select class="form-control" name="communityID2" required
-                        data-toggle="tooltip" title="Categoría del suplidor">
-                    @foreach (var item in Model.communityList)
-                    {
-                        if (Model.communityID2 == item.id)
-                        {
-                            <option value="@item.id" selected>@item.first_name</option>
-                        }
-                        else
-                        {
-                            <option value="@item.id">@item.first_name</option>
-                        }
-                    }
-                </select>
-                <small class="form-text text-muted">Categoría del suplidor</small>
-            </div>
-        </div>*@
+                        <div class="form-group row">
+                            <label class="col-sm-3 col-form-label">Comunidad</label>
+                            <div class="col-sm-9">
+                                <select class="form-control" name="communityID2" required
+                                        data-toggle="tooltip" title="Categoría del suplidor">
+                                    @foreach (var item in Model.communityList)
+                                    {
+                                        if (Model.communityID2 == item.id)
+                                        {
+                                            <option value="@item.id" selected>@item.first_name</option>
+                                        }
+                                        else
+                                        {
+                                            <option value="@item.id">@item.first_name</option>
+                                        }
+                                    }
+                                </select>
+                                <small class="form-text text-muted">Categoría del suplidor</small>
+                            </div>
+                        </div>*@
                             <div class="form-divider"></div>
                             <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
                             <a href="@Url.Action("listado", "administradores", new { area = "webmaster" })"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
