--- a/WebApplication1/Areas/webmaster/Views/administradores/listado.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/administradores/listado.cshtml
@@ -51,6 +51,17 @@
         <!-- end back button -->
 
         <div class="row">
+            @if (ViewBag.msgError != null)
+            {
+                <div class="col-12">
+                    <div class="alert alert-danger" role="alert">
+                        <strong>Error: </strong> @ViewBag.msgError
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                </div>
+            }
             <div class="col-12">
                 <div class="card m-b-30">
                     <div class="card-body">
@@ -78,48 +89,48 @@
                                 <tbody>
                                     @foreach (var item in Model.coadminList)
                                     {
-                                    <tr>
-                                        <td>@item.first_name1</td>
-                                        <td>@item.last_name1</td>
-                                        <td>@item.mother_last_name1</td>
-                                        <td class="text-center">@item.email</td>
-                                        <td class="text-center">
-                                            @if (item.is_active == true)
-                                            {
-                                                <button type="button" class="btn btn-primary waves-effect waves-light btn-sm" onclick="onAdminInactive(this)" data-id="@item.id">Activo</button>
-                                            }
-                                            else
-                                            {
-                                                <button type="button" class="btn btn-danger waves-effect waves-light btn-sm" onclick="onAdminActive(this)" data-id="@item.id">Inactivo</button>
-                                            }
+                                        <tr>
+                                            <td>@item.first_name1</td>
+                                            <td>@item.last_name1</td>
+                                            <td>@item.mother_last_name1</td>
+                                            <td class="text-center">@item.email</td>
+                                            <td class="text-center">
+                                                @if (item.is_active == true)
+                                                {
+                                                    <button type="button" class="btn btn-primary waves-effect waves-light btn-sm" onclick="onAdminInactive(this)" data-id="@item.id">Activo</button>
+                                                }
+                                                else
+                                                {
+                                                    <button type="button" class="btn btn-danger waves-effect waves-light btn-sm" onclick="onAdminActive(this)" data-id="@item.id">Inactivo</button>
+                                                }
 
-                                        </td>
-                                        <td class="text-center">@Model.communityDict[item.id]</td>
-                                        <td class="text-center">
-                                            <a href="@Url.Action("ver", "administradores", new { area = "webmaster", id = item.id  })">
-                                                <button type="button"
-                                                        class="btn btn-success waves-effect waves-light btn-sm mr-1 mb-1"
-                                                        data-toggle="tooltip" data-placement="top" title="Ver">
-                                                    <i class="mdi mdi-eye"></i>
-                                                </button>
-                                            </a>
-                                            <a href="@Url.Action("editar", "administradores", new { area = "webmaster",  id = item.id })">
-                                                <button type="button"
-                                                        class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
-                                                        data-toggle="tooltip" data-placement="top" title="Editar">
-                                                    <i class="mdi mdi-lead-pencil"></i>
-                                                </button>
-                                            </a>
-                                            <a href="#">
-                                                <button type="button" onclick="onDeleteCoadmin(this)" data-id="@item.id"
-                                                        class="btn btn-danger waves-effect waves-light btn-sm mb-1"
-                                                        data-toggle="tooltip"
-                                                        data-placement="top" title="Eliminar">
-                                                    <i class="mdi mdi-delete"></i>
-                                                </button>
-                                            </a>
-                                        </td>
-                                    </tr>
+                                            </td>
+                                            <td class="text-center">@Model.communityDict[item.id]</td>
+                                            <td class="text-center">
+                                                <a href="@Url.Action("ver", "administradores", new { area = "webmaster", id = item.id  })">
+                                                    <button type="button"
+                                                            class="btn btn-success waves-effect waves-light btn-sm mr-1 mb-1"
+                                                            data-toggle="tooltip" data-placement="top" title="Ver">
+                                                        <i class="mdi mdi-eye"></i>
+                                                    </button>
+                                                </a>
+                                                <a href="@Url.Action("editar", "administradores", new { area = "webmaster",  id = item.id })">
+                                                    <button type="button"
+                                                            class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
+                                                            data-toggle="tooltip" data-placement="top" title="Editar">
+                                                        <i class="mdi mdi-lead-pencil"></i>
+                                                    </button>
+                                                </a>
+                                                <a href="#">
+                                                    <button type="button" onclick="onDeleteCoadmin(this)" data-id="@item.id"
+                                                            class="btn btn-danger waves-effect waves-light btn-sm mb-1"
+                                                            data-toggle="tooltip"
+                                                            data-placement="top" title="Eliminar">
+                                                        <i class="mdi mdi-delete"></i>
+                                                    </button>
+                                                </a>
+                                            </td>
+                                        </tr>
                                     }
                                 </tbody>
                             </table>
