--- a/WebApplication1/Areas/webmaster/Views/comunidades/agregar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/comunidades/agregar.cshtml
@@ -38,7 +38,17 @@
         <!-- end back button -->
 
         <div class="row">
-
+            @if (ViewBag.msgError != null)
+            {
+                <div class="col-12">
+                    <div class="alert alert-danger" role="alert">
+                        <strong>Error: </strong> @ViewBag.msgError
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                </div>
+            }
             <div class="col-12">
                 <div class="card">
                     @using (Html.BeginForm("newcommunity", "comunidades", FormMethod.Post,
@@ -59,26 +69,26 @@
                                 <div class="col-sm-9">
                                     <input maxlength="20" class="form-control" type="text" value="" name="first_name"
                                            data-toggle="tooltip" title="Nombre de la comunidad"
-                                           placeholder="Nombre" id="example-email-input" required/>
+                                           placeholder="Nombre" id="example-email-input" required />
                                     <small class="form-text text-muted">Nombre de la comunidad</small>
                                 </div>
                             </div>
                             <div class="form-divider"></div>
                             @*<div class="form-group row">
-                                <label class="col-sm-3 col-form-label">Administrador</label>
-                                <div class="col-sm-9">
-                                    <select class="form-control" id="AdminSelect" multiple="multiple" name="adminlist"
-                                            data-toggle="tooltip" title="Email del administrador">
+                            <label class="col-sm-3 col-form-label">Administrador</label>
+                            <div class="col-sm-9">
+                                <select class="form-control" id="AdminSelect" multiple="multiple" name="adminlist"
+                                        data-toggle="tooltip" title="Email del administrador">
 
-                                        @foreach (var item in Model.coadminList)
-                                        {
-                                            <option value="@item.id">@item.email</option>
-                                        }
-                                    </select>
-                                    <small class="form-text text-muted">Listado de administradores</small>
-                                </div>
+                                    @foreach (var item in Model.coadminList)
+                                    {
+                                        <option value="@item.id">@item.email</option>
+                                    }
+                                </select>
+                                <small class="form-text text-muted">Listado de administradores</small>
                             </div>
-                            <div class="form-divider"></div>*@
+                        </div>
+                        <div class="form-divider"></div>*@
                             <div class="form-group row">
                                 <label class="col-sm-3 col-form-label">Paquete</label>
                                 <div class="col-sm-9">
