--- a/WebApplication1/Areas/webmaster/Views/paquetes/agregar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/paquetes/agregar.cshtml
@@ -79,7 +79,7 @@
                         <div class="form-group row">
                             <label for="example-lastname1-input" class="col-sm-3 col-form-label">Descripción</label>
                             <div class="col-sm-9">
-                                <textarea class="form-control" rows="3" placeholder="Descripción"
+                                <textarea maxlength="40" required class="form-control" rows="3" placeholder="Descripción"
                                           name="description" data-toggle="tooltip" title="Descripción del paquete"></textarea>
                                 <small class="form-text text-muted">Descripción del paquete</small>
                             </div>
