--- a/WebApplication1/Areas/webmaster/Views/paquetes/editar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/paquetes/editar.cshtml
@@ -81,7 +81,7 @@
                             <div class="form-group row">
                                 <label for="example-lastname1-input" class="col-sm-3 col-form-label">Descripción</label>
                                 <div class="col-sm-9">
-                                    <textarea class="form-control" rows="3" name="description"
+                                    <textarea maxlength="40" required rows="3" class="form-control" rows="3" name="description"
                                               data-toggle="tooltip"
                                               placeholder="">@Model.editPackage.description</textarea>
                                     @*   <small class="form-text text-muted">Descripción del paquete</small>*@
