--- a/WebApplication1/Areas/webmaster/Views/webmaster/editar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/webmaster/editar.cshtml
@@ -53,7 +53,17 @@
         <!-- end back button -->
 
         <div class="row">
-
+            @if (ViewBag.msgError != null)
+            {
+                <div class="col-12">
+                    <div class="alert alert-danger" role="alert">
+                        <strong>Error: </strong> @ViewBag.msgError
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                </div>
+            }
             <div class="col-12">
                 <div class="card">
                     @using (Html.BeginForm("editwebmaster", "webmaster", FormMethod.Post,
@@ -66,12 +76,12 @@
                      }))
                     {
                         @Html.AntiForgeryToken()
-                        <input name="adminID" value="@Model.editAdmin.id" type="hidden" />
+                        <input name="adminID" class="idDelUserEdit" value="@Model.editAdmin.id" type="hidden" />
                         <div class="card-body">
                             <h5 class="d-inline-block">@Model.editAdmin.first_name1 @Model.editAdmin.last_name1</h5>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <div id="img-fluid"  class="col-sm-3">
+                                <div id="img-fluid" class="col-sm-3">
                                     @if (Model.editAdmin.user_img != null)
                                     {
                                         <img src="~/Upload/User_Logo/@Model.editAdmin.user_img" alt="user-img" class="img-fluid" />
@@ -85,7 +95,7 @@
                                     <div class="input-group mt-2">
                                         <div class="custom-file">
                                             <input type="file" class="custom-file-input" id="inputGroupFile04" name="user_logo"
-                                                   data-toggle="tooltip"  />
+                                                   data-toggle="tooltip" />
                                             <label class="custom-file-label" for="inputGroupFile04">Seleccionar imagen a editar</label>
                                         </div>
                                         <div class="col-sm-3">
@@ -110,8 +120,8 @@
                                 <div class="col-sm-9">
                                     <input maxlength="20" class="form-control soloTexto" type="text" value="@Model.editAdmin.last_name1"
                                            placeholder="Apellido paterno" id="example-email-input" name="last_name1" required
-                                           data-toggle="tooltip"  />
-                                   @* <small class="form-text text-muted">Apellido Paterno del Administrador</small>*@
+                                           data-toggle="tooltip" />
+                                    @* <small class="form-text text-muted">Apellido Paterno del Administrador</small>*@
                                 </div>
                             </div>
                             <div class="form-divider"></div>
@@ -121,17 +131,18 @@
                                     <input maxlength="20" class="form-control soloTexto" type="text" value="@Model.editAdmin.mother_last_name1"
                                            placeholder="Apellido materno" id="example-email-input" name="mother_last_name1"
                                            data-toggle="tooltip" required />
-                                  @*  <small class="form-text text-muted">Apellido Materno del Administrador</small>*@
+                                    @*  <small class="form-text text-muted">Apellido Materno del Administrador</small>*@
                                 </div>
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-lastname1-input" class="col-sm-3 col-form-label">Email</label>
+                                <label for="example-lastname1-input" class="col-sm-3 col-form-label">Correo electrónico</label>
                                 <div class="col-sm-9">
-                                    <input maxlength="40" class="form-control" type="email" value="@Model.editAdmin.email"
-                                           placeholder="Email" id="example-email-input" name="email"
+                                    <input maxlength="40" class="form-control inputEmailKey" type="email" value="@Model.editAdmin.email"
+                                           placeholder="Correo electrónico" id="example-email-input" name="email"
                                            data-toggle="tooltip" required />
-                                   @* <small class="form-text text-muted">Email del administrador</small>*@
+                                    <div id="textError">
+                                    </div>
                                 </div>
                             </div>
                             <div class="form-divider"></div>
@@ -141,51 +152,51 @@
                                     <input maxlength="16" class="form-control" type="password" value="@Model.editPassword" required
                                            placeholder="Contraseña" id="example-password-input" name="password"
                                            data-toggle="tooltip" />
-                                   @* <small class="form-text text-muted">Contraseña utilizada para ingresar al sistema</small>*@
+                                    @* <small class="form-text text-muted">Contraseña utilizada para ingresar al sistema</small>*@
                                 </div>
                             </div>
                             @*<div class="form-divider"></div>
-                                <div class="form-group row">
-                                    <label class="col-sm-3 col-form-label">Comunidad</label>
-                                    <div class="col-sm-9">
-                                        <select class="form-control" name="communityID1" required
-                                                data-toggle="tooltip" title="Categoría del suplidor">
-                                            @foreach (var item in Model.communityList)
-                                            {
-                                                if (Model.communityID1 == item.id)
-                                                {
-                                                    <option value="@item.id" selected>@item.first_name</option>
-                                                }
-                                                else
-                                                {
-                                                    <option value="@item.id">@item.first_name</option>
-                                                }
-                                            }
-                                        </select>
-                                        <small class="form-text text-muted">Categoría del suplidor</small>
-                                    </div>
-                                </div>
-                                <div class="form-divider"></div>
-                                <div class="form-group row">
-                                    <label class="col-sm-3 col-form-label">Comunidad</label>
-                                    <div class="col-sm-9">
-                                        <select class="form-control" name="communityID2" required
-                                                data-toggle="tooltip" title="Categoría del suplidor">
-                                            @foreach (var item in Model.communityList)
-                                            {
-                                                if (Model.communityID2 == item.id)
-                                                {
-                                                    <option value="@item.id" selected>@item.first_name</option>
-                                                }
-                                                else
-                                                {
-                                                    <option value="@item.id">@item.first_name</option>
-                                                }
-                                            }
-                                        </select>
-                                        <small class="form-text text-muted">Categoría del suplidor</small>
-                                    </div>
-                                </div>*@
+                        <div class="form-group row">
+                            <label class="col-sm-3 col-form-label">Comunidad</label>
+                            <div class="col-sm-9">
+                                <select class="form-control" name="communityID1" required
+                                        data-toggle="tooltip" title="Categoría del suplidor">
+                                    @foreach (var item in Model.communityList)
+                                    {
+                                        if (Model.communityID1 == item.id)
+                                        {
+                                            <option value="@item.id" selected>@item.first_name</option>
+                                        }
+                                        else
+                                        {
+                                            <option value="@item.id">@item.first_name</option>
+                                        }
+                                    }
+                                </select>
+                                <small class="form-text text-muted">Categoría del suplidor</small>
+                            </div>
+                        </div>
+                        <div class="form-divider"></div>
+                        <div class="form-group row">
+                            <label class="col-sm-3 col-form-label">Comunidad</label>
+                            <div class="col-sm-9">
+                                <select class="form-control" name="communityID2" required
+                                        data-toggle="tooltip" title="Categoría del suplidor">
+                                    @foreach (var item in Model.communityList)
+                                    {
+                                        if (Model.communityID2 == item.id)
+                                        {
+                                            <option value="@item.id" selected>@item.first_name</option>
+                                        }
+                                        else
+                                        {
+                                            <option value="@item.id">@item.first_name</option>
+                                        }
+                                    }
+                                </select>
+                                <small class="form-text text-muted">Categoría del suplidor</small>
+                            </div>
+                        </div>*@
                             <div class="form-divider"></div>
                             <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
                             <a href="@Url.Action("listado", "webmaster", new { area = "webmaster" })"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
