--- a/WebApplication1/Areas/coadmin/Views/contacto/agregar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/contacto/agregar.cshtml
@@ -140,7 +140,7 @@
                                    
                                         <input maxlength="20" class="form-control soloTexto" type="text" value="" name="vocal2"
                                                placeholder="Nombre del vocal" id="example-lastname1-input"
-                                               data-toggle="tooltip" title="Nombre completo del vocal" required />
+                                               data-toggle="tooltip" title="Nombre completo del vocal" />
                                     
                                         <small class="form-text text-muted">Nombre completo del vocal</small>
                                 </div>
@@ -151,7 +151,7 @@
                                    
                                         <input maxlength="20" class="form-control soloTexto" type="text" value="" name="vocal3"
                                                placeholder="Nombre del vocal" id="example-lastname1-input"
-                                               data-toggle="tooltip" title="Nombre completo del vocal" required />
+                                               data-toggle="tooltip" title="Nombre completo del vocal" />
                                     
                                         <small class="form-text text-muted">Nombre completo del vocal</small>
                                 </div>
@@ -214,9 +214,9 @@
                                   
                                         <input maxlength="40" class="form-control" type="email" value="" name="email"
                                                placeholder="Correo electrónico" id="example-email-input"
-                                               data-toggle="tooltip" title="Correo electrónico del suplidor" required />
+                                               data-toggle="tooltip" title="Correo electrónico del contacto" required />
                                    
-                                    <small class="form-text text-muted">Correo electrónico del suplidor</small>
+                                    <small class="form-text text-muted">Correo electrónico del contacto</small>
                                 </div>
                             </div>
                             <div class="form-divider"></div>
