--- a/WebApplication1/Areas/coadmin/Views/contacto/editar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/contacto/editar.cshtml
@@ -139,7 +139,7 @@
                                 <div class="col-sm-9">
                                     <input maxlength="20" class="form-control soloTexto" type="text" value="@Model.editContactInfo.vocal2" name="vocal2"
                                            placeholder="Nombre del vocal" id="example-lastname1-input"
-                                           data-toggle="tooltip" title="Nombre completo del vocal" required />
+                                           data-toggle="tooltip" title="Nombre completo del vocal" />
                                     @*<small class="form-text text-muted">Nombre completo del vocal</small>*@
                                 </div>
                             </div>
@@ -148,7 +148,7 @@
                                 <div class="col-sm-9">
                                     <input maxlength="20" class="form-control soloTexto" type="text" value="@Model.editContactInfo.vocal3" name="vocal3"
                                            placeholder="Nombre del vocal" id="example-lastname1-input"
-                                           data-toggle="tooltip" title="Nombre completo del vocal" required />
+                                           data-toggle="tooltip" title="Nombre completo del vocal" />
                                     @*<small class="form-text text-muted">Nombre completo del vocal</small>*@
                                 </div>
                             </div>
@@ -200,8 +200,7 @@
                                 <div class="col-sm-9">
                                     <input maxlength="40" class="form-control" type="email" value="@Model.editContactInfo.email" name="email"
                                            placeholder="Correo electrónico" id="example-email-input"
-                                           data-toggle="tooltip" title="Correo electrónico del suplidor" required />
-                                    @*<small class="form-text text-muted">Correo electrónico del suplidor</small>*@
+                                           data-toggle="tooltip" title="Correo electrónico del contacto" required />
                                 </div>
                             </div>
                             <div class="form-divider"></div>
