--- a/WebApplication1/Areas/coadmin/Views/cuotas/listado.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/cuotas/listado.cshtml
@@ -76,7 +76,7 @@
                             </div>
                             <div class="col-md-6 mb-1">
                                 <a href="@Url.Action("agregar", "cuotas", new { area = "coadmin" })">
-                                    <button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mb-1">Agregar</button>
+                                    <button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mb-1">Agregar cuota</button>
                                 </a>
                             </div>
                         </div>
