--- a/WebApplication1/Areas/coadmin/Views/contacto/ver.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/contacto/ver.cshtml
@@ -20,7 +20,7 @@
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
                             <li class="breadcrumb-item"><a href="@Url.Action("listado", "contacto", new { area = "coadmin" })" class="text-success"> Contactos</a></li>
-                            <li class="breadcrumb-item active">Editar contacto</li>
+                            <li class="breadcrumb-item active">Ver contacto</li>
                         </ul>
                     </div>
                 </div>
