--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -103,6 +103,10 @@ scratch. This page gets rid of all links and provides the needed markup only.
             display: none !important;
         }
 
+        #eventsR_filter {
+            display: none !important;
+        }
+
         #blogTable_filter {
             display: none !important;
         }
