--- a/WebApplication1/Areas/coadmin/Views/titulares/editar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/editar.cshtml
@@ -95,7 +95,7 @@
                         }))
                     {
                         @Html.AntiForgeryToken()
-                        <input type="hidden" value="@Model.editUser.id" name="editID" />
+                        <input type="hidden" class="idDelUserEdit" value="@Model.editUser.id" name="editID" />
                         <div class="card-body">
                             <h5 class="d-inline-block">Información del titular</h5>
                             <div class="form-divider"></div>
@@ -128,10 +128,11 @@
                             <div class="form-group row">
                                 <label for="example-email-input" class="col-sm-3 col-form-label">Correo electrónico</label>
                                 <div class="col-sm-9">
-                                    <input maxlength="40" class="form-control" type="email" name="email" required value="@Model.editUser.email"
+                                    <input maxlength="40" class="form-control inputEmailKey" type="email" name="email" required value="@Model.editUser.email"
                                            data-toggle="tooltip"
                                            placeholder="Correo electrónico del titular" id="example-email-input">
-                                    @*<small class="form-text text-muted">Correo electrónico del titular</small>*@
+                                    <div id="textError">
+                                    </div>
                                 </div>
                             </div>
                             <div class="form-divider"></div>
