--- a/WebApplication1/Areas/coadmin/Views/titulares/agregar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/agregar.cshtml
@@ -121,10 +121,12 @@
                         <div class="form-group row">
                             <label for="example-email-input" class="col-sm-3 col-form-label">Correo electrónico</label>
                             <div class="col-sm-9">
-                                <input maxlength="40" class="form-control" type="email" value="" name="email" required
+                                <input maxlength="40" class="form-control inputEmailKey" type="email" value="" name="email" required
                                        data-toggle="tooltip" title="Correo electrónico del titular"
                                        placeholder="Correo electrónico del titular" id="example-email-input">
-                                <small class="form-text text-muted">Correo electrónico del titular</small>
+                                <div id="textError">
+                                    <small class="form-text text-muted">Correo electrónico del Titular</small>
+                                </div>
                             </div>
                         </div>
                         <div class="form-divider"></div>
